--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title> Anirudh Garg portfolio</title>
         <link rel="stylesheet" href="style.css">
+        <script src="index.js"></script>
     </head>
 
     <style>
@@ -19,8 +20,15 @@
     </style>
    
     <body>
+        <img class="image1" src="1685345282047.png" alt="photo"></img>
+        <div class="container">
+            <button id="home">HOME</button>
+            <button id="gallery">GALLERY</button>
+            <button id="about">ABOUT</button>
+            <button id="contact">CONTACT</button>
+        </div>
 
-        <div class="image-overlay" </div>
+
         
         <h1>Anirudh Garg</h1>
         <hr/>
@@ -38,7 +46,6 @@
     </sections>
 
     <sections><div class="headers"></class><b>Experience:</div><div class="text"></b><ul><li>Microsoft Learn Student Chapter,TIET (Nov 2022 - present)</li><li>Indian Society for Technical Education(Nov 2022-present)</li><li>Entrepreneurship Development Cell(Nov 2022-present)</li></ul>
-    <!-- <img class = "image1" src="1685345282047.png" alt="photo"></img> -->
     </sections></div>
     <br>
 
