--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
         <div class="text"><ol><li>English</li><li>Hindi</li><li>Punjabi</li></ol></div>
         </p>
         <img class="image" src="20230412_101704-removebg-preview.png"alt ="profile photo"></img>
+
+        <br><br>
+
+        <div id="insta" class="social"><a href="https://www.instagram.com/anirudhgarg7/"><img src="https://pngimg.com/uploads/instagram/instagram_PNG10.png" height=50px width=50px>INSTAGRAM</a></div>
+
+        
+        <div id="linkedin" class="social"><a href="https://www.linkedin.com/in/anirudh-garg-a11077249/" target="_main"><img src="https://th.bing.com/th/id/R.21fba12531ac377e1642a01921db9fbd?rik=ErbH90Kfy3L6tg&riu=http%3a%2f%2fencomium.ng%2fwp-content%2fuploads%2f2016%2f01%2fLinkedIn-Logo.png&ehk=qo9l10kLERwTTr5WEWyHeVR%2bKIWh4CchVBnnAxyz3ic%3d&risl=&pid=ImgRaw&r=0"  height="50px width=50px">LINKEDIN</a></div>
     
     <br>
     <hr>
