--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <input id="search" type="text" placeholder="Search this website">
+<!--             <input id="search" type="text" placeholder="Search this website"> -->
         </nav>
 
     </head>
