--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </section>
     <br><br><br>
     <div id="glimpse">A short glimpse of college life</div>
-    <video class="video" src="FUN@TIET PATIALA.mp4" height = 600px width=600px controls>My video</video>
+    <video class="video" src="fun@tiet.mp4" height = 600px width=600px controls>My video</video>
 
 
     <script src="script.js"></script>
