--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <sections id="education"><div class="headings"><b><u>EDUCATION</u></b></div>
         <img id="books" src="https://th.bing.com/th/id/OIP.RoKaElX0fzDTMWFcz4w16AHaEh?pid=ImgDet&rs=1">
-        <div class= "text2"><ul><li>Gobindgarh Public School(2008-2020)<br>Class 10 - 95.6%</li><br><li>SD Model School(2020-2022)<br>Class 12- 92.8%</li><br><li>Thapar Institute of Engineering and Technology, Patiala(2022-2026)<br>Computer Engineering<br>CGPA-8.75(till second sem)</li></ul></div>
+        <div class= "text2"><ul><li>Thapar Institute of Engineering and Technology, Patiala(2022-2026)<br>Computer Engineering<br>CGPA-8.75(till second sem)</li><br><li>SD Model School(2020-2022)<br>Class 12- 92.8%</li><br><li>Gobindgarh Public School(2008-2020)<br>Class 10 - 95.6%</li><br></ul></div>
     </sections>
 
     <sections id="experience">
